--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
@@ -15,7 +15,7 @@
                                 <input ng-if="!ctrl.isRemoteFilter()" type="text" class="form-control input-sm" ng-model="ctrl.filtername" ng-click="ctrl.muteAction($event)" />
 
                                 <i ng-if="ctrl.isRemoteFilter()" class="glyphicon icon-loader" ng-show="ctrl.showloading"></i>
-                                <input ng-if="ctrl.isRemoteFilter()" class="form-control input-sm" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-model="ctrl.filtername" ng-keyup="search();">
+                                <input ng-if="ctrl.isRemoteFilter()" class="form-control input-sm" type="text" placeholder="{{ctrl.limitplaceholder}}" ng-model="ctrl.filtername" ng-keyup="ctrl.search();">
 
                             </div>
                         </div>
@@ -24,7 +24,7 @@
                         <div ng-if="ctrl.isRemoteFilter()" ng-show="ctrl.showloading">Loading..</div>
 
                         <div style="overflow: auto; margin-top: 5px" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
-                            <div class="mark-select " ng-click="selectValue($event, c); " ng-repeat="c in ctrl.datasource | filter:ctrl.filtername"
+                            <div class="mark-select " ng-click="ctrl.selectValue($event, c); " ng-repeat="c in ctrl.datasource | filter:ctrl.filtername"
                                  style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                                 <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
                                 <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
@@ -34,7 +34,7 @@
                     </div>
                     <!-- filter -->
 
-                    <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.datasource" class="mark-select " ng-click="selectValue($event, c);" ng-mouseenter="ctrl.muteaction($event);"
+                    <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.datasource" class="mark-select " ng-click="ctrl.selectValue($event, c);" ng-mouseenter="ctrl.muteaction($event);"
                          style="display: block;padding:2px; margin:2px; white-space: normal;">
                         <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
                     </div>
@@ -44,7 +44,7 @@
                     <div ng-if="ctrl.selectedSectionVisible()" style="border-left:1px solid #f0f0f0;display: inline-block; max-width: 220px; height: 260px; overflow: auto; white-space:normal" ng-show="ctrl.selectedSectionVisible()">
                         <div style="padding:5px ;height:29px">
                             {{ctrl.selectlbl}}
-                            <a href="" class="link" style="position: absolute; right: 5px;" ng-click="clearAllSelected($event); ">
+                            <a href="" class="link" style="position: absolute; right: 5px;" ng-click="ctrl.clearAllSelected($event); ">
                                 Clear all
                                 <i class="glyphicon glyphicon-trash hand-cursor "></i>
                             </a>
@@ -52,7 +52,7 @@
                         <div style="height: 225px; overflow: auto;padding-top:5px">
                             <span class="label custom-label" ng-repeat="obj in ctrl.selectedvalues">
                                 {{ctrl.getObjectText(obj)}}
-                                <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="selectValue($event,obj);"></span>
+                                <span class="glyphicon glyphicon-remove hand-cursor" aria-hidden="true" ng-click="ctrl.selectValue($event,obj);"></span>
                             </span>
                         </div>
 
