--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/TestView.html
@@ -1,4 +1,5 @@
-﻿<div class="container-fluid ">
+﻿
+<div class="container-fluid ">
 
     <div class="row">
         <h1>Test View</h1>
@@ -22,8 +23,8 @@
 
         <div class="row">
             <div class="col-lg-2">
-                <vr-select datasource="testviewCtrl.optionsZone2.datasource" selectedvalues="testviewCtrl.optionsZone2.selectedvalues"
-                           datatextfield="name" datavaluefield="value" entityname="Zone"></vr-select>
+                <!--<vr-select datasource="testviewCtrl.optionsZone.datasource" selectedvalues="testviewCtrl.optionsZone.selectedvalues"
+                           datatextfield="name" datavaluefield="value" entityname="Zone"></vr-select>-->
             </div>
 
             <div class="col-lg-2">
@@ -33,9 +34,9 @@
 
             <div class="col-lg-2">
                 <vr-select datasource="testviewCtrl.optionsZone.datasource"
-                           selectedvalues="testviewCtrl.optionsZone.selectedvalues" datatextfield="Name" datavaluefield="ZoneId" entityname="Zone" hideselectedvaluessection ismultipleselection hidefilterbox></vr-select>
+                           selectedvalues="testviewCtrl.optionsZone.selectedvalues" datatextfield="Name" datavaluefield="ZoneId" entityname="Zone" isrequired  ismultipleselection hidefilterbox></vr-select>
             </div>
-
+            
         </div>
 
         <div class="row">
@@ -46,7 +47,7 @@
             <div class="col-lg-2">
                 <span ng-repeat="c in testviewCtrl.optionsFilter.selectedvalues">{{c}}</span>
             </div>
-
+            
         </div>
 
 
@@ -79,11 +80,7 @@
                 Invalid : {{myForm.$invalid}}
             </div>
         </div>-->
-        
-        <!--<div class="col-lg-2">-->
-            <!--<vr-dropdown id="dropdown1" type="ondemand" options="testviewCtrl.optionsZone" datatextfield="Name" datavaluefield="ZoneId"
-                         onsearch="testviewCtrl.onsearch" entityname="Zone" isrequired customvalidate="testviewCtrl.customvalidate1" on-ready="testviewCtrl.onready"></vr-dropdown>-->
-        <!--</div>-->
+  
 
         
 
